Add simple js script

--- a/prezentacja/index.html
+++ b/prezentacja/index.html
@@ -91,10 +91,10 @@
 						<ul>
 							<li>
 								Przegląd podstawowych struktur: <br/> 
-								deklaracje, wyrażenia, typy i widoczność danych, warunki, pętle, obsługa i generowanie wyjątków, obsługa i generowanie zdarzeń
+								deklaracje, wyrażenia, typy i widoczność danych, warunki, pętle, obsługa i generowanie wyjątków.
 							</li>
 							<li>
-								Wprowadzenie do DOM (Document Object Model): <br/> omówienie obiektów window, document, navigator. DOM XML. Zmiany w strukturze DOM dokumentu HTML
+								Wprowadzenie do DOM (Document Object Model): <br/> omówienie obiektów window, document, navigator. DOM XML. Zmiany w strukturze DOM dokumentu HTML. Obsługa i generowanie zdarzeń.
 							</li>
 							<li>
 								Obiektowość w JS – sposoby deklarowania funkcji, konstruktory, prototypy, format JSON						
