--- a/src/podstawy/index.html
+++ b/src/podstawy/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Pierwszy skrypt</h1>
+        <input id="myInput" type="text" placeholder="Imię">
+        <button id="myButton" type="button">Zagraj!</button>
         <script src='script.js'></script>
     </body>
 </html>
